# Journal

./: CMakeLists.txt  readme.md
app/: CMakeLists.txt  main.cpp
journalapp/: CMakeLists.txt  libjournal.h  main.cpp
lib/: CMakeLists.txt  libjournal.cpp
libjournal/: CMakeLists.txt  libjournal.cpp  libjournal.h  test.cpp
test/: CMakeLists.txt  test.cpp
